--- a/stats/stats-client/pom.xml
+++ b/stats/stats-client/pom.xml
@@ -25,6 +25,18 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>stats-dto</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>4.11.0</version> <!-- Use a recent version -->
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
