--- a/stats/stats-server/src/main/resources/application-test.properties
+++ b/stats/stats-server/src/main/resources/application-test.properties
@@ -3,3 +3,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./db/stats
 spring.datasource.username=stats
 spring.datasource.password=stats
+spring.sql.init.mode=always
