--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=9090
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:9041/stats
+spring.datasource.url=jdbc:postgresql://localhost:9032/stats
 spring.datasource.username=stats
 spring.datasource.password=stats
+spring.sql.init.mode=always
