--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ target/
 main-service/db
 stats/stats-server/db
 volumes/
+.project
+.settings
+.settings/
+**/.project
+**/.settings
+**/.settings/
