--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,26 @@
 services:
   stats-server:
     build: ./stats/stats-server
+    image: stats-server-image
+    container_name: stats-server
     ports:
       - "9090:9090"
     depends_on:
       - stats-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres_stats_db:5432/stats
+      - SPRING_DATASOURCE_USERNAME=stats
+      - SPRING_DATASOURCE_PASSWORD=stats
 
   stats-db:
     image: postgres:16.1
     container_name: postgres_stats_db
+    ports:
+      - "9032:5432"
     environment:
-      - POSTGRES_PASSWORD=stats
-      - POSTGRES_USER=stats
       - POSTGRES_DB=stats
+      - POSTGRES_USER=stats
+      - POSTGRES_PASSWORD=stats
     healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
       timeout: 5s
@@ -21,11 +29,17 @@ services:
 
   ewm-service:
     build: ./main-service
+    image: ewm-server-image
+    container_name: ewm-server
     ports:
       - "8080:8080"
     depends_on:
       - ewm-db
-#      - stats-server
+      - stats-server
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres_ewn_db:5432/main
+      - SPRING_DATASOURCE_USERNAME=main
+      - SPRING_DATASOURCE_PASSWORD=main
 
   ewm-db:
     image: postgres:16.1
@@ -34,6 +48,8 @@ services:
       - POSTGRES_PASSWORD=main
       - POSTGRES_USER=main
       - POSTGRES_DB=main
+    ports:
+      - "8032:5432"
     healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
       timeout: 5s
