--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres_stats_db:5432/stats
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats
       - SPRING_DATASOURCE_USERNAME=stats
       - SPRING_DATASOURCE_PASSWORD=stats
 
@@ -37,7 +37,7 @@ services:
       - ewm-db
 #      - stats-server
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres_ewn_db:5432/main
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewn_db:5432/main
       - SPRING_DATASOURCE_USERNAME=main
       - SPRING_DATASOURCE_PASSWORD=main
 
