--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - ewm-db
 #      - stats-server
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewn_db:5432/main
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/main
       - SPRING_DATASOURCE_USERNAME=main
       - SPRING_DATASOURCE_PASSWORD=main
 
