--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:8032/m
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:main}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:main}
 spring.sql.init.mode=always
+stats-client.url=${STATS_SERVER:http://localhost:9090}
